gcc/testsuite/gdc.test/compilable/imports/ice11300a.d
module imports.ice11300a;
static import ice11300;
enum value = ice11300.value;
