gcc/testsuite/gdc.test/fail_compilation/test5412b.d
module test5412b;

import A = imports.test5412a;
static import A = imports.test5412b;
